<resources>
    <string name="app_name">CoffeeRep.</string>

    <string name="registered_beans">登録した豆</string>
    <string name="registered_coffee">登録したコーヒー</string>
    <string name="registered_dripmethod">登録した抽出方法</string>

    <string name="rawbeans">生豆</string>
    <string name="roastbeans">焙煎豆</string>
    <string name="selfdripcoffee">自家抽出コーヒー</string>
    <string name="readymadecoffee">市販品コーヒー</string>
    <string name="dripmethod">抽出方法</string>

    <string name="register_rawbeans">生豆の登録</string>
    <string name="register_roastbeans">焙煎豆の登録</string>
    <string name="register_selfdripcoffee">自家抽出コーヒーの登録</string>
    <string name="register_readymadecoffee">市販品コーヒーの登録</string>
    <string name="register_dripmethod">抽出方法の登録</string>

    <string name="detail_rawbeans">生豆の詳細</string>
    <string name="detail_roastbeans">焙煎豆の詳細</string>
    <string name="detail_selfdripcoffee">自家抽出コーヒーの詳細</string>
    <string name="detail_readymadecoffee">市販品コーヒーの詳細</string>
    <string name="detail_dripmethod">抽出方法の詳細</string>

    <string name="edit_rawbeans">生豆の編集</string>
    <string name="edit_roastbeans">焙煎豆の編集</string>
    <string name="edit_selfdripcoffee">自家抽出コーヒーの編集</string>
    <string name="edit_readymadecoffee">市販品コーヒーの編集</string>
    <string name="edit_dripmethod">抽出方法の編集</string>

    <string name="register">登録</string>
    <string name="edit">編集</string>
    <string name="delete">削除</string>
    <string name="confirm_delete">本当に削除しますか？</string>
    <string name="ok">はい</string>
    <string name="cancel">いいえ</string>

    <!-- for common table -->
    <string name="registered_date">登録日時</string>
    <string name="name">名前</string>
    <string name="name_must">名前（必須）</string>
    <string name="picture1">写真１</string>
    <string name="picture2">写真２</string>
    <string name="picture3">写真３</string>
    <string name="caffeineless">カフェインレス</string>
    <string name="review">総合評価</string>
    <string name="memo">メモ</string>

        <!-- for rawbeans/roastbeans table -->
        <string name="purchased_date">購入日</string>
        <string name="purchased_shop">購入店</string>
        <string name="amount">内容量[g]</string>
        <string name="country">原産国</string>
        <string name="place">原産地</string>
        <string name="farm">農園</string>
        <string name="variety">品種</string>
        <string name="process">精製方法</string>

            <!-- for roastbeans table only-->
            <string name="brend">配合</string>
            <string name="self_roast">自家焙煎</string>
            <string name="roast_rawbeans">焙煎した生豆</string>
            <string name="roast_level">焙煎度</string>

        <!-- for selfdripcoffee/readymadecoffee table -->
        <string name="drink_date">飲んだ日時</string>
        <string name="drink_place">飲んだ場所</string>
        <string name="drink_amount">飲んだ量[mL]</string>
        <string name="drink_method">飲み方</string>
        <string name="drink_method_temperature">温度</string>
        <string name="drink_method_type">タイプ</string>
        <string name="taste">味</string>
        <string name="flavor">フレーバー</string>
        <string name="match_food">相性の良い食べ物</string>
        <string name="atmosphere">雰囲気</string>

        <!-- for dripmethod table -->
        <string name="method">方法</string>

    <string-array name="variety_list">
        <item>ロブスタ種</item>
        <item>アラビカ種</item>
        <item>その他</item>
    </string-array>

    <string-array name="process_list">
        <item>ナチュラル</item>
        <item>ウォッシュド</item>
        <item>セミウォッシュド（パルプドナチュラル）</item>
        <item>ハニープロセス</item>
        <item>スマトラ式</item>
        <item>嫌気性発酵（アナエロビック）</item>
        <item>その他</item>
    </string-array>

    <string-array name="brend_list">
        <item>シングル</item>
        <item>ブレンド</item>
    </string-array>

    <string-array name="roast_level_list">
        <item>ライトロースト</item>
        <item>シナモンロースト</item>
        <item>ミディアムロースト</item>
        <item>ハイロースト</item>
        <item>シティロースト</item>
        <item>フルシティロースト</item>
        <item>フレンチロースト</item>
        <item>イタリアンロースト</item>
    </string-array>

    <string-array name="drink_method_temperature_list">
        <item>ホット</item>
        <item>アイス</item>
    </string-array>

    <string-array name="drink_method_type_list">
        <item>・・・</item>
        <item>その他</item>
    </string-array>

    <string-array name="flavor_list">
        <item>・・・</item>
        <item>その他</item>
    </string-array>

    <string-array name="match_food_list">
        <item>・・・</item>
        <item>その他</item>
    </string-array>

    <string-array name="atmosphere_list">
        <item>・・・</item>
        <item>その他</item>
    </string-array>

    <string-array name="dripmethod_list">
        <item>ペーパードリップ</item>
        <item>ネルドリップ</item>
        <item>メタルフィルター</item>
        <item>サイフォン</item>
        <item>エスプレッソ</item>
        <item>フレンチプレス</item>
        <item>エアロプレス</item>
        <item>水出し（コールドブリュー）</item>
        <item>パーコレーター</item>
        <item>その他</item>
    </string-array>
</resources>