<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_raw">

    <LinearLayout
        android:id="@+id/topbar_coffee_list"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/brown_light_roast">

        <TextView
            android:id="@+id/title_coffee_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/registered_coffee"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            android:fontFamily="serif"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topbar_coffee_list"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_readymadecoffee_coffee_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:minHeight="200dp"
                android:maxHeight="400dp"
                app:cardCornerRadius="10dp"
                >

                <TextView
                    android:id="@+id/text_readymadecoffee_coffee_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/readymadecoffee"
                    android:textSize="@dimen/cardview_text_size"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    />

                <Button
                    android:id="@+id/button_coffee_list_to_readymadecoffee_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/register_readymadecoffee"
                    android:fontFamily="serif"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"
                    android:backgroundTint="@color/brown_city_roast"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_readymadecoffee_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="60dp"
                    android:minHeight="200dp"
                    android:maxHeight="400dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_selfdripcoffee_coffee_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:minHeight="200dp"
                android:maxHeight="400dp"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/text_selfdripcoffee_coffee_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/selfdripcoffee"
                    android:textSize="@dimen/cardview_text_size"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    />

                <Button
                    android:id="@+id/button_coffee_list_to_selfdripcoffee_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/register_selfdripcoffee"
                    android:fontFamily="serif"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"
                    android:backgroundTint="@color/brown_city_roast"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_selfdripcoffee_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="60dp"
                    android:minHeight="200dp"
                    android:maxHeight="400dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    />
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/scrollview_underlimit"
                />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>